syntax="proto3";
package pb;
import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
option go_package = "github.com/vietquan-37/order-service/pkg/pb";
message GetOneUserRequest{
  int32 id=1;
}
message UserResponse{
  int32 user_id=1;
  string user_name=2;
  string phone_number=3;
  string role=4;
  google.protobuf.Timestamp create_at=5;
}
service AuthService{
  rpc GetOneUser(GetOneUserRequest)returns(UserResponse){}
}